# python-gardenlinux-lib

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.ruff.yaml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  api.html  cli.html  cliff.toml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  release.html  search.html  searchindex.js
.doctrees/: api.doctree  cli.doctree  environment.pickle  index.doctree  release.doctree
.github/actions/dev_setup/: action.yml
.github/actions/features_parse/: action.yml
.github/actions/flavors_parse/: action.yml
.github/actions/python_lib/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: bandit.yml  black.yml  build.yml  coverage.yml  docs-check.yml  docs.yml  pytests.yml  release.yml
_sources/: cli.rst.txt  index.rst.txt  release.rst.txt
_static/: custom.css
docs/: Makefile  api.rst  cli.rst  conf.py  index.rst  release.rst
docs/how-to/: cli.md  release.md
docs/overview/: index.md
docs/reference/: cli.md
hack/: print_feature_extensions.sh
src/gardenlinux/: constants.py  distro_version.py  logger.py
src/gardenlinux/apt/: __init__.py  changelog_file.py  code_file_mixin.py  control_file.py  copyright_file.py  debian_file_mixin.py  debsource.py  docs_file.py  install_file.py  package_repo_info.py  postinst_file.py  postrm_file.py  preinst_file.py  prerm_file.py  rules_file.py
src/gardenlinux/distro_version/: __init__.py
src/gardenlinux/export_libs/: __main__.py  exporter.py
src/gardenlinux/features/: __init__.py  __main__.py  cname.py  cname_main.py  difference_formatter.py  difference_formatter_main.py  metadata_main.py  parser.py
src/gardenlinux/flavors/: __init__.py  __main__.py  parser.py
src/gardenlinux/git/: __init__.py  credentials.py  git.py  remote_callbacks.py  repository.py
src/gardenlinux/github/: __init__.py  __main__.py  client.py  github.py  release_main.py
src/gardenlinux/oci/: __init__.py  __main__.py  checksum.py  container.py  image.py  image_manifest.py  index.py  layer.py  manifest.py  platform.py  podman.py  podman_context.py  podman_object_context.py  registry.py  schemas.py  wrapper.py
src/gardenlinux/release_note/: get_kernelurls.py
src/gardenlinux/s3/: __init__.py  __main__.py  bucket.py  s3_artifacts.py  s3_object_index.py
src/gardenlinux/sources/: debian.py  kernel.py
src/oci/: Containerfile
src/parse_features_lib/: parse_features.py
src/python_gardenlinux_lib/: __init__.py  cname.py  constants.py  crypto.py  logger.py  package_repo_info.py  parse_features.py  version.py
src/python_gardenlinux_lib/apt/: package_repo_info.py  parse_debsource.py
src/python_gardenlinux_lib/buildinfra/: build_status.py
src/python_gardenlinux_lib/features/: package_repo_info.py  parse_features.py
src/python_gardenlinux_lib/flavors/: __main__.py  parse_flavors.py  parser.py
src/python_gardenlinux_lib/git/: __init__.py  git.py
src/python_gardenlinux_lib/oci/: cli.py  helper.py  registry.py  registry.py.new  schemas.py
src/python_gardenlinux_lib/oras/: crypto.py  registry.py  schemas.py
src/python_gardenlinux_lib/s3/: s3.py
test-data/: build-test-data.sh
test-data/diff_files/: additional_files.md  compare_nightly-nightly_stats  compare_nightly.md  compare_nightly_different_commit-nightly_stats  compare_nightly_different_commit.md  different_commit-nightly_stats  different_commit.md  files_missing.md  many_issues.md  no_issues.md  one_issue.md  only_issues.md  same_nightly-nightly_stats  same_nightly.md
test-data/diff_files/different_commit/: bare-sapmachine-amd64-diff  metal-capi-arm64-diff
test-data/diff_files/many_issues/: container-arm64-diff  gdch-gardener_prod-arm64-diff  metal-capi-arm64-diff
test-data/release_notes/: github_release_notes_1877.3.md  github_release_notes_2150.0.0.md  glvd_1877.3.json
test-data/release_notes/s3_bucket_artifacts/: ali-gardener_prod-amd64.s3_metadata.yaml  aws-gardener_prod-amd64.s3_metadata.yaml  aws-gardener_prod-arm64.s3_metadata.yaml  aws-gardener_prod_tpm2_trustedboot-amd64.s3_metadata.yaml  aws-gardener_prod_tpm2_trustedboot-arm64.s3_metadata.yaml  aws-gardener_prod_usi-amd64.s3_metadata.yaml  aws-gardener_prod_usi-arm64.s3_metadata.yaml  azure-gardener_prod-amd64.s3_metadata.yaml  azure-gardener_prod-arm64.s3_metadata.yaml  azure-gardener_prod_tpm2_trustedboot-amd64.s3_metadata.yaml  azure-gardener_prod_tpm2_trustedboot-arm64.s3_metadata.yaml  azure-gardener_prod_usi-amd64.s3_metadata.yaml  azure-gardener_prod_usi-arm64.s3_metadata.yaml  container-amd64.s3_metadata.yaml  container-arm64.s3_metadata.yaml  gcp-gardener_prod-amd64.s3_metadata.yaml  (+37 more)
tests/: conftest.py  constants.py  helper.py  test_deduce_image_type.py  test_get_features_dict.py  test_get_oci_metadata.py  test_oci.py  test_parse_debsource.py  test_push_image.py  test_push_image_kms.py
tests/apt/: test_debsource.py  test_package_repo_info.py
tests/distro_version/: test_distro_version.py
tests/features/: constants.py  test_cname.py  test_cname_main.py  test_difference_formatter.py  test_features_parser.py  test_main.py  test_metadata_main.py  test_parser.py  test_reproducibility.py
tests/flavors/: test_init.py  test_main.py  test_parser.py
tests/github/: conftest.py  constants.py  test_create_github_release.py  test_create_github_release_notes.py  test_deployment_platform.py  test_download_metadata_files.py  test_github_script.py  test_main.py  test_markdown_generator.py  test_release.py  test_release_page.py  test_upload_to_github_release_page.py
tests/oci/: test_container.py  test_image_manifest.py  test_index.py  test_layer.py  test_main.py  test_oci.py  test_podman.py
tests/s3/: conftest.py  constants.py  test_bucket.py  test_main.py  test_s3_artifacts.py
(+75 files in other folders)
