[tool.poetry]
name = "gardenlinux"
version = "0.10.8"
description = "Contains tools to work with the features directory of gardenlinux, for example deducting dependencies from feature sets or validating cnames"
authors = ["Garden Linux Maintainers <contact@gardenlinux.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gardenlinux", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13, <3.14"
apt-repo = "^0.5"
boto3 = "^1.42.10"
click = "^8.3.1"
cryptography = "^46.0.3"
jsonschema = "^4.25.1"
networkx = "^3.6"
oras = "^0.2.38"
pygit2 = "^1.19.0"
pygments = "^2.19.2"
PyYAML = "^6.0.2"
gitpython = "^3.1.45"

[tool.poetry.group.dev.dependencies]
bandit = "^1.9.2"
moto = "^5.1.16"
pre-commit = "^4.5.0"
python-dotenv = "^1.2.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
isort = "^7.0.0"
requests-mock = "^1.12.1"

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.scripts]
gl-cname = "gardenlinux.features.cname_main:main"
gl-diff = "gardenlinux.features.difference_formatter_main:main"
gl-features-parse = "gardenlinux.features.__main__:main"
gl-flavors-parse = "gardenlinux.flavors.__main__:main"
gl-gh-release = "gardenlinux.github.release.__main__:main"
gl-oci = "gardenlinux.oci.__main__:main"
gl-s3 = "gardenlinux.s3.__main__:main"
gl-gh = "gardenlinux.github.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = "test-data"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["gardenlinux"]
skip = ["test-data", ".venv", "**/__pycache", ".pytest-cache", "hack"]

[tool.bandit]
skips = ["B101", "B404"] # allow asserts, subprocesses
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
